--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ div {
     opacity: .5;
 
 }
+#shop{
+    opacity: .5;
+
+}
 #share{
     float: left;
     position: fixed;
@@ -57,15 +61,13 @@ div {
     background-position: center;
     background-size: 50%;
     position: relative;
-    height: 100%;
+    height: 120%;
     width: 100%;
     color: white;
     margin: 0px;
     padding: 0px;
 }
-#intro img{
 
-}
 #intro a{
     border: none;
     background-color: transparent;
@@ -126,7 +128,7 @@ hr {
     background-color: #000;
     background-size: 1071px;;
     color: white;
-    height: 100%;
+    height: 120%;
     width:100%;
     margin: 0 auto;
     padding-top: 0%;
@@ -136,7 +138,7 @@ hr {
 }
 #bg1 .cycle{
     background: url(./assets/cycle/velo18.png) 50% 81% no-repeat fixed;
-    height: 100%;
+    height: 120%;
     padding: 0%;
     position: absolute;
     width: inherit;
@@ -148,7 +150,7 @@ hr {
     background-color: #f4d0ad;
     background-size: 1071px;
     color: white;
-    height: 100%;
+    height: 120%;
     width: 100%;
     margin: 0 auto;
     padding-top: 0;
@@ -156,24 +158,24 @@ hr {
     position: relative;
 }
 #traveler .cycle {
-    background: url('./assets/cycle/travelerbg2.png') 50% 81% no-repeat fixed;
-    height: 100%;
+    background: url('./assets/cycle/travelerbg2.png') 50% 80.5% no-repeat fixed;
+    height: 120%;
     padding: 0;
     position: absolute;
     width: inherit;
     z-index: 10;
 }
 #bg3 {
-    background: url('./assets/bg/bg3.jpg') 50%  no-repeat fixed;
+    background: url('./assets/bg/bg3.jpg') 50% 0 no-repeat fixed;
     background-color: #b1deed;
     background-size: 1071px;
     color: white;
     height: 120%;
-    width: 100%;
-    margin: 0 auto;
+    /* width: 100%; */
+    /* margin: 0 auto; */
     padding-top: 0;
-    overflow: hidden;
-    position: relative;
+    /* overflow: hidden; */
+    /* position: relative; */
 }
 #bg3 .cycle {
     background: url('./assets/cycle/weirdobg3.png') 50% 81% no-repeat fixed;
@@ -193,11 +195,11 @@ hr {
     background-size: 1071px;
     color: white;
     height: 120%;
-    width: 100%;
-    margin: 0 auto;
+    /* width: 100%;
+    margin: 0 auto; */
     padding-top: 0;
-    overflow: hidden;
-    position: relative;
+    /* overflow: hidden;
+    position: relative; */
 }
 #bg4 .cycle {
     background: url('./assets/cycle/hipsterbg4.png') 50% 81% no-repeat fixed;
@@ -557,4 +559,38 @@ hr {
     position: absolute;
     width: inherit;
     z-index: 10;
+}
+.parallax-section {
+    height: 500px;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+}
+
+#nav {
+    list-style: none;
+    position: fixed;
+    right: 44px;
+    z-index: 50;
+    height: 280px;
+    margin-top: 40px;
+}
+#nom {
+    opacity: 1;
+    right: 20px;
+    position: absolute;
+}#nom li a {
+    opacity: 1;
+    display: none;
+    float: right;
+}
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    unicode-bidi: isolate;
 }
